<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <artifactId>pom-jipipe</artifactId>
        <groupId>org.hkijena</groupId>
        <version>6.0.0-SNAPSHOT</version>
        <relativePath>../../pom.xml</relativePath>
    </parent>

    <artifactId>jipipe-plugin-ij</artifactId>
    <version>6.0.0-SNAPSHOT</version>

    <name>jipipe-plugin-ij</name>
    <description>JIPipe ImageJ data types</description>
    <inceptionYear>2020</inceptionYear>
    <url>https://www.jipipe.org/</url>

    <organization>
        <name>Leibniz Institute for Natural Product Research and Infection Biology - Hans Knöll Institute (HKI)</name>
        <url>https://www.leibniz-hki.de/</url>
    </organization>
    <licenses>
        <license>
            <name>mit</name>
            <url>https://opensource.org/licenses/MIT</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <developers>
        <developer>
            <id>RGerst</id>
            <name>Ruman Gerst</name>
            <url>https://www.leibniz-hki.de/en/asb-staff-details.html?member=1027</url>
        </developer>
        <developer>
            <id>Zseresnyes</id>
            <name>Zoltán Cseresnyés</name>
            <url>https://www.leibniz-hki.de/en/asb-staff-details.html?member=144</url>
        </developer>
        <developer>
            <id>MTFigge</id>
            <name>Marc Thilo Figge</name>
            <url>https://www.leibniz-hki.de/en/staff-details.html?member=81</url>
        </developer>
    </developers>
    <contributors>
        <contributor>
            <name>None</name>
        </contributor>
    </contributors>
    <mailingLists>
        <mailingList>
            <name>HKI Jena</name>
            <archive>https://www.leibniz-hki.de/de/angewandte-systembiologie.html</archive>
        </mailingList>
    </mailingLists>
    <scm>
        <connection>scm:git:https://github.com/applied-systems-biology/jipipe.git</connection>
        <developerConnection>scm:git:https://github.com/applied-systems-biology/jipipe.git</developerConnection>
        <tag>HEAD</tag>
        <url>https://github.com/applied-systems-biology/jipipe</url>
    </scm>
    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/applied-systems-biology/jipipe/issues</url>
    </issueManagement>
    <ciManagement>
        <system>GitHub CI</system>
        <url>https://github.com/applied-systems-biology/jipipe</url>
    </ciManagement>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <license.licenseName>mit</license.licenseName>
        <license.copyrightOwners>N/A</license.copyrightOwners>
        <license.projectName>JIPipe-IJ</license.projectName>
    </properties>

<!--    <dependencyManagement>-->
<!--        <dependencies>-->
<!--            <dependency>-->
<!--                <groupId>org.jzy3d</groupId>-->
<!--                <artifactId>vtk-java8-wrapper</artifactId>-->
<!--                <version>2.2.1-SNAPSHOT</version>-->
<!--            </dependency>-->
<!--        </dependencies>-->
<!--    </dependencyManagement>-->

    <dependencies>
        <dependency>
            <groupId>org.hkijena</groupId>
            <artifactId>jipipe-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.hkijena</groupId>
            <artifactId>jipipe-plugin-tables</artifactId>
        </dependency>
        <dependency>
            <groupId>org.hkijena</groupId>
            <artifactId>jipipe-plugin-strings</artifactId>
        </dependency>
        <dependency>
            <groupId>org.hkijena</groupId>
            <artifactId>jipipe-plugin-filesystem</artifactId>
        </dependency>
        <dependency>
            <groupId>ome</groupId>
            <artifactId>bio-formats_plugins</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>ch.qos.logback</groupId>
                    <artifactId>logback-classic</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>sc.fiji</groupId>
            <artifactId>3D_Viewer</artifactId>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>org.jzy3d</groupId>-->
<!--            <artifactId>vtk-java8-wrapper</artifactId>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>org.bioimageanalysis.icy</groupId>-->
<!--            <artifactId>icy-vtk</artifactId>-->
<!--            <version>${vtk.version}</version>-->
<!--        </dependency>-->
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven-javadoc-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>21</release>
                </configuration>
            </plugin>
            <plugin>
                <!-- Disable enforcer, triggered by JDK8 limits introduced by SciJava -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <configuration>
                    <fail>false</fail>
                </configuration>
            </plugin>
        </plugins>
    </build>
<!--    <repositories>-->
<!--        <repository>-->
<!--            <id>icy</id>-->
<!--            <name>Icy</name>-->
<!--            <url>https://maven.scijava.org/content/repositories/icy/</url>-->
<!--        </repository>-->
<!--    </repositories>-->
</project>
